20_post_infrastructure/auth/authentik_ldap_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-outpost-ldap
  namespace: auth
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/name: "authentik"
    app.kubernetes.io/instance: "authentik"
    app.kubernetes.io/component: "outpost-ldap"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: "authentik"
      app.kubernetes.io/instance: "authentik"
      app.kubernetes.io/component: "outpost-ldap"
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9300"
      labels:
        app.kubernetes.io/name: "authentik"
        app.kubernetes.io/instance: "authentik"
        app.kubernetes.io/component: "outpost-ldap"
    spec:
      containers:
        - name: ldap
          image: ghcr.io/goauthentik/ldap:2026.5.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: ldap
              containerPort: 3389
              protocol: TCP
            - name: ldaps
              containerPort: 6636
              protocol: TCP
            - name: monitoring
              containerPort: 9300
              protocol: TCP
            - name: debug
              containerPort: 9900
              protocol: TCP
          resources:
            requests:
              memory: "250Mi"
              cpu: "25m"
            limits:
              memory: "300Mi"
              cpu: "50m"
