20_post_infrastructure/auth/authentik_worker_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-worker
  namespace: auth
  labels:
    app.kubernetes.io/name: "authentik"
    app.kubernetes.io/instance: "authentik"
    app.kubernetes.io/component: "worker"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "authentik"
      app.kubernetes.io/instance: "authentik"
      app.kubernetes.io/component: "worker"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "authentik"
        app.kubernetes.io/instance: "authentik"
        app.kubernetes.io/component: "worker"
    spec:
      serviceAccountName: authentik
      terminationGracePeriodSeconds: 30
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: worker
          image: ghcr.io/goauthentik/server:2026.5.3
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          args:
            - worker
          resources:
            requests:
              memory: "900Mi"
              cpu: "350m"
            limits:
              memory: "1536Mi"
              cpu: "700m"
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - ak
                - healthcheck
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - ak
                - healthcheck
          startupProbe:
            failureThreshold: 60
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - ak
                - healthcheck
          volumeMounts:
            - name: blueprints
              mountPath: /blueprints/custom
            - name: certificate
              mountPath: /certs/auth.${vals_info_cluster_domain}
      volumes:
        - name: certificate
          secret:
            secretName: authentik-server-tls
            items:
              - key: tls.crt
                path: auth.${vals_info_cluster_domain}.crt
              - key: tls.key
                path: auth.${vals_info_cluster_domain}.key
        - name: blueprints
          projected:
            sources:
              - secret:
                  name: authentik-blueprint-audiobookshelf
              - secret:
                  name: authentik-blueprint-grafana
              - secret:
                  name: authentik-blueprint-immich
              - secret:
                  name: authentik-blueprint-ldap
              - secret:
                  name: authentik-blueprint-mail
              - secret:
                  name: authentik-blueprint-paperless
